# zk-pay-miden

./: .gitignore  Cargo.toml  README.md
scripts/: run-miden-localnode.sh
