[package]
name = "zk-pay"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dotenv = "0.15.0"
miden-client = { version = "0.9.0", features = ["testing", "concurrent", "tonic", "sqlite"] }
miden-crypto = "0.14.1"
miden-lib = "0.9.0"
miden-objects = "0.9.0"
miden-tx = "0.9.0"
rand = { version = "0.9" }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "net", "macros", "fs"] }
